2009-02-15  Corrado Primier  <bardo@aur.archlinux.org>

	* Release bump: 2

	* PKGBUILD: substituted jre dependency with java-runtime, lots of
	cleanup