@@ -1,17 +1,18 @@
 # $Id$
-# Maintainer: Corrado Primier <bardo@aur.archlinux.org>
+# Maintainer: Ray Rashif <schivmeister@gmail.com>
+# Contributor: Corrado Primier <bardo@aur.archlinux.org>
 # Contributor: Vinay S Shastry <vinayshastry@gmail.com>
 
 pkgname=freemind
 pkgver=0.8.1
 pkgrel=2
 pkgdesc="A Java mindmapping tool"
-arch=('i686' 'x86_64')
+arch=(any)
 url="http://freemind.sourceforge.net"
 license=('GPL')
 makedepends=('unzip')
 depends=('java-runtime')
-source=(http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-bin-max-${pkgver//./_}.zip
+source=(http://downloads.sourceforge.net/${pkgname}/${pkgname}-bin-max-${pkgver//./_}.zip
         freemind.png freemind.desktop freemind.run)
 md5sums=('e6078a7116e3dca610817c3c60db4cbf' '82a474f26f976974b95da2e25b7480a0'
          '07241361af6cfb965deeab890d17f4a7' '4070fc9f286ad7aaa4eb394203152b33')
@@ -34,4 +35,3 @@ build() {
   install -Dm644 ${srcdir}/freemind.desktop ${pkgdir}/usr/share/applications/freemind.desktop
   install -Dm644 ${srcdir}/freemind.png ${pkgdir}/usr/share/pixmaps/freemind.png
 }
-
