@@ -1,4 +1,11 @@
-2009-02-15  Corrado Primier  <bardo@aur.archlinux.org>
+2010-05-30 Ray Rashif <schivmeister@gmail.com>
+
+	* Rebuild to update package filename with architecture
+
+	* PKGBUILD: changed arch to "any"
+	            no pkgrel update as no content changed
+
+2009-02-15 Corrado Primier <bardo@aur.archlinux.org>
 
 	* Release bump: 2
 
